bindings/bindings.h

// regex_t
// #include <regex.h>
typedef struct regex_t {
           size_t    __due_to_size[8];
} regex_t ;
// typedef struct _regex_t regex_t;
typedef ssize_t regoff_t;
typedef struct regmatch_t {
	regoff_t rm_so;
	regoff_t rm_eo;
} regmatch_t;
// typedef  _regmatch_t regmatch_t;

// added by us
struct FILE;
// // platform.h
typedef signed char smallint;
typedef struct walker_list {
	char *end;
	char *cur;
	struct walker_list *prev;
	char wbuf[1];
} walker_list;
/* Variable */
typedef struct var_s {
	unsigned type;            /* flags */
	double number;
	char *string;
	union {
		int aidx;               /* func arg idx (for compilation stage) */
		struct xhash_s *array;  /* array ptr */
		struct var_s *parent;   /* for func args, ptr to actual parameter */
		walker_list *walker;    /* list of array elements (for..in) */
	} x;
} var;
/* Function */
typedef struct func_s {
	unsigned nargs;
	struct chain_s body;
} func;
/* I/O stream */
typedef struct rstream_s {
	struct FILE *F;
	char *buffer;
	int adv;
	int size;
	int pos;
	smallint is_pipe;
} rstream;
typedef struct hash_item_s {
	union {
		struct var_s v;         /* variable/array hash */
		struct rstream_s rs;    /* redirect streams hash */
		struct func_s f;        /* functions hash */
	} data;
	struct hash_item_s *next;       /* next in chain */
	char name[1];                   /* really it's longer */
} hash_item;
typedef struct xhash_s {
	unsigned nel;           /* num of elements */
	unsigned csize;         /* current hash size */
	unsigned nprime;        /* next hash size in PRIMES[] */
	unsigned glen;          /* summary length of item names */
	struct hash_item_s **items;
} xhash;
/* Tree node */
typedef struct node_s {
	uint32_t info;
	unsigned lineno;
	union {
		struct node_s *n;
		var *v;
		int aidx;
		char *new_progname;
		regex_t *re;
	} l;
	union {
		struct node_s *n;
		regex_t *ire;
		func *f;
	} r;
	union {
		struct node_s *n;
	} a;
} node;
typedef struct tsplitter_s {
	node n;
	regex_t re[2];
} tsplitter;
// extern const char tokenlist[] ALIGN1;
// extern const uint32_t tokeninfo[] ALIGN4;

/* internal variable names and their initial values       */
/* asterisk marks SPECIAL vars; $ is just no-named Field0 */
enum {
	CONVFMT,    OFMT,       FS,         OFS,
	ORS,        RS,         RT,         FILENAME,
	SUBSEP,     F0,         ARGIND,     ARGC,
	ARGV,       ERRNO,      FNR,        NR,
	NF,         IGNORECASE, ENVIRON,    NUM_INTERNAL_VARS
};
struct globals2 {
	uint32_t t_info; /* often used */
	uint32_t t_tclass;
	char *t_string;
	int t_lineno;

	var *intvar[NUM_INTERNAL_VARS]; /* often used */

	/* former statics from various functions */
	char *split_f0__fstrings;

	uint32_t next_token__save_tclass;
	uint32_t next_token__save_info;
	uint32_t next_token__ltclass;
	smallint next_token__concat_inserted;

	smallint next_input_file__files_happen;
	rstream next_input_file__rsm;

	var *evaluate__fnargs;
	unsigned evaluate__seed;
	regex_t evaluate__sreg;

	var ptest__v;

	tsplitter exec_builtin__tspl;

	/* biggest and least used members go last */
	tsplitter fsplitter, rsplitter;
};
#define t_info       (G.t_info      )
#define t_tclass     (G.t_tclass    )
#define t_string     (G.t_string    )
#define t_lineno     (G.t_lineno    )
#define intvar       (G.intvar      )
#define fsplitter    (G.fsplitter   )
#define rsplitter    (G.rsplitter   )
// void init_g(void);
void init_g(void) {
	set_ptr_to_globals((char*)xzalloc(sizeof(G1)+sizeof(G)) + sizeof(G1));
	G.next_token__ltclass = TC_OPTERM;
	G.evaluate__seed = 1;
}
// exposed from awk.c for trans
void zero_out_var(var *vp);
void syntax_error(const char *message);
unsigned hashidx(const char *name);
xhash *hash_init(void);
void *hash_search(xhash *hash, const char *name);
void hash_rebuild(xhash *hash);
void *hash_find(xhash *hash, const char *name);
void hash_remove(xhash *hash, const char *name);
char *skip_spaces(char *p);
char *nextword(char **s);
char nextchar(char **s);
void unescape_string_in_place(char *s1);
int isalnum_(int c);
double my_strtod(char **pp);
xhash *iamarray(var *v);
void clear_array(xhash *array);
var *clrvar(var *v);
var *setvar_p(var *v, char *value);
var *setvar_s(var *v, const char *value);
var *setvar_u(var *v, const char *value);
void setari_u(var *a, int idx, const char *s);
var *setvar_i(var *v, double value);
const char *getvar_s(var *v);
double getvar_i(var *v);
unsigned long getvar_i_int(var *v);
var *copyvar(var *dest, const var *src);
var *incvar(var *v);
int is_numeric(var *v);
int istrue(var *v);
var *nvalloc(int n);
void nvfree(var *v);
uint32_t next_token(uint32_t expected);
void rollback_token(void);
node *new_node(uint32_t info);
void mk_re_node(const char *s, node *n, regex_t *re);
node *condition(void);
node *parse_expr(uint32_t iexp);
node *chain_node(uint32_t info);
void chain_expr(uint32_t info);
node *chain_loop(node *nn);
void chain_group(void);
void parse_program(char *p);
node *mk_splitter(const char *s, tsplitter *spl);
regex_t *as_regex(node *op, regex_t *preg);
char* qrealloc(char *b, int n, int *size);
void fsrealloc(int size);
int regexec1_nonempty(const regex_t *preg, const char *s, regmatch_t pmatch[]);
int awk_split(const char *s, node *spl, char **slist);
void split_f0(void);
void handle_special(var *v);
node *nextarg(node **pn);
void hashwalk_init(var *v, xhash *array);
int hashwalk_next(var *v);
int ptest(node *pattern);
int awk_getline(rstream *rsm, var *v);
int fmt_num(char *b, int size, const char *format, double n, int int_as_int);
char *awk_printf(node *n);
int awk_sub(node *rn, const char *repl, int nm, var *src, var *dest, int subexp);
NOINLINE int do_mktime(const char *ds);
NOINLINE var *exec_builtin(node *op, var *res);
var *evaluate(node *op, var *res);
int awk_exit(int r);
int is_assignment(const char *expr);
rstream *next_input_file(void);
// int awk_main(int argc UNUSED_PARAM, char **argv;

struct FILE* stdin;
struct FILE* stdout;
struct FILE* stderr;
extern char *strerror(int __errnum);
extern int fileno (struct FILE *__stream);
extern int regexec (const struct regex_t * __preg,
      const char * __String, size_t __nmatch,
      struct regmatch_t __pmatch[__nmatch],
      int __eflags);
extern int fflush(struct FILE *__stream);
extern int fputs(const char * __s, struct FILE * __stream);
extern struct FILE *popen(const char *__command, const char *__modes);
extern void regfree(regex_t *__preg);
extern struct FILE* FAST_FUNC fopen_for_read(const char *path);
extern int strcasecmp (const char *__s1, const char *__s2);
extern int strcmp(const char *__s1, const char *__s2);
void print_intvar(void);
void print_var(struct var_s *v);
void print_rstream(struct rstream_s *rs);