bindings/bindings.rs

#[repr(C)]
#[derive(Copy, Clone)]
pub struct globals2 {
    pub t_info: u32,
    pub t_tclass: u32,
    pub t_string: *mut ::std::os::raw::c_char,
    pub t_lineno: ::std::os::raw::c_int,
    pub intvar: [*mut var; 19usize],
    pub split_f0__fstrings: *mut ::std::os::raw::c_char,
    pub next_token__save_tclass: u32,
    pub next_token__save_info: u32,
    pub next_token__ltclass: u32,
    pub next_token__concat_inserted: smallint,
    pub next_input_file__files_happen: smallint,
    pub next_input_file__rsm: rstream,
    pub evaluate__fnargs: *mut var,
    pub evaluate__seed: ::std::os::raw::c_uint,
    pub evaluate__sreg: regex_t,
    pub ptest__v: var,
    pub exec_builtin__tspl: tsplitter,
    pub fsplitter: tsplitter,
    pub rsplitter: tsplitter,
}
extern "C" {
    pub fn init_g();
}
extern "C" {
    pub fn zero_out_var(vp: *mut var);
}
extern "C" {
    pub fn syntax_error(message: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn hashidx(name: *const ::std::os::raw::c_char) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn hash_init() -> *mut xhash;
}
extern "C" {
    pub fn hash_search(
        hash: *mut xhash,
        name: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn hash_rebuild(hash: *mut xhash);
}
extern "C" {
    pub fn hash_find(
        hash: *mut xhash,
        name: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn hash_remove(hash: *mut xhash, name: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn skip_spaces(p: *mut ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn nextword(s: *mut *mut ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn nextchar(s: *mut *mut ::std::os::raw::c_char) -> ::std::os::raw::c_char;
}
extern "C" {
    pub fn unescape_string_in_place(s1: *mut ::std::os::raw::c_char);
}
extern "C" {
    pub fn isalnum_(c: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn my_strtod(pp: *mut *mut ::std::os::raw::c_char) -> f64;
}
extern "C" {
    pub fn iamarray(v: *mut var) -> *mut xhash;
}
extern "C" {
    pub fn clear_array(array: *mut xhash);
}
extern "C" {
    pub fn clrvar(v: *mut var) -> *mut var;
}
extern "C" {
    pub fn setvar_p(v: *mut var, value: *mut ::std::os::raw::c_char) -> *mut var;
}
extern "C" {
    pub fn setvar_s(v: *mut var, value: *const ::std::os::raw::c_char) -> *mut var;
}
extern "C" {
    pub fn setvar_u(v: *mut var, value: *const ::std::os::raw::c_char) -> *mut var;
}
extern "C" {
    pub fn setari_u(a: *mut var, idx: ::std::os::raw::c_int, s: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn setvar_i(v: *mut var, value: f64) -> *mut var;
}
extern "C" {
    pub fn getvar_s(v: *mut var) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn getvar_i(v: *mut var) -> f64;
}
extern "C" {
    pub fn getvar_i_int(v: *mut var) -> ::std::os::raw::c_ulong;
}
extern "C" {
    pub fn copyvar(dest: *mut var, src: *const var) -> *mut var;
}
extern "C" {
    pub fn incvar(v: *mut var) -> *mut var;
}
extern "C" {
    pub fn is_numeric(v: *mut var) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn istrue(v: *mut var) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nvalloc(n: ::std::os::raw::c_int) -> *mut var;
}
extern "C" {
    pub fn nvfree(v: *mut var);
}
extern "C" {
    pub fn next_token(expected: u32) -> u32;
}
extern "C" {
    pub fn rollback_token();
}
extern "C" {
    pub fn new_node(info: u32) -> *mut node;
}
extern "C" {
    pub fn mk_re_node(s: *const ::std::os::raw::c_char, n: *mut node, re: *mut regex_t);
}
extern "C" {
    pub fn condition() -> *mut node;
}
extern "C" {
    pub fn parse_expr(iexp: u32) -> *mut node;
}
extern "C" {
    pub fn chain_node(info: u32) -> *mut node;
}
extern "C" {
    pub fn chain_expr(info: u32);
}
extern "C" {
    pub fn chain_loop(nn: *mut node) -> *mut node;
}
extern "C" {
    pub fn chain_group();
}
extern "C" {
    pub fn parse_program(p: *mut ::std::os::raw::c_char);
}
extern "C" {
    pub fn mk_splitter(s: *const ::std::os::raw::c_char, spl: *mut tsplitter) -> *mut node;
}
extern "C" {
    pub fn as_regex(op: *mut node, preg: *mut regex_t) -> *mut regex_t;
}
extern "C" {
    pub fn qrealloc(
        b: *mut ::std::os::raw::c_char,
        n: ::std::os::raw::c_int,
        size: *mut ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn fsrealloc(size: ::std::os::raw::c_int);
}
extern "C" {
    pub fn regexec1_nonempty(
        preg: *const regex_t,
        s: *const ::std::os::raw::c_char,
        pmatch: *mut regmatch_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn awk_split(
        s: *const ::std::os::raw::c_char,
        spl: *mut node,
        slist: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn split_f0();
}
extern "C" {
    pub fn handle_special(v: *mut var);
}
extern "C" {
    pub fn nextarg(pn: *mut *mut node) -> *mut node;
}
extern "C" {
    pub fn hashwalk_init(v: *mut var, array: *mut xhash);
}
extern "C" {
    pub fn hashwalk_next(v: *mut var) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ptest(pattern: *mut node) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn awk_getline(rsm: *mut rstream, v: *mut var) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fmt_num(
        b: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        n: f64,
        int_as_int: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn awk_printf(n: *mut node) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn awk_sub(
        rn: *mut node,
        repl: *const ::std::os::raw::c_char,
        nm: ::std::os::raw::c_int,
        src: *mut var,
        dest: *mut var,
        subexp: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn do_mktime(ds: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn exec_builtin(op: *mut node, res: *mut var) -> *mut var;
}
extern "C" {
    pub fn evaluate(op: *mut node, res: *mut var) -> *mut var;
}
extern "C" {
    pub fn awk_exit(r: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn is_assignment(expr: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn next_input_file() -> *mut rstream;
}
extern "C" {
    pub static mut stdin: *mut FILE;
}
extern "C" {
    pub static mut stdout: *mut FILE;
}
extern "C" {
    pub static mut stderr: *mut FILE;
}
extern "C" {
    pub fn strerror(__errnum: ::std::os::raw::c_int) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn fileno(__stream: *mut FILE) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn regexec(
        __preg: *const regex_t,
        __String: *const ::std::os::raw::c_char,
        __nmatch: usize,
        __pmatch: *mut regmatch_t,
        __eflags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fflush(__stream: *mut FILE) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fputs(__s: *const ::std::os::raw::c_char, __stream: *mut FILE) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn popen(
        __command: *const ::std::os::raw::c_char,
        __modes: *const ::std::os::raw::c_char,
    ) -> *mut FILE;
}
extern "C" {
    pub fn regfree(__preg: *mut regex_t);
}
extern "C" {
    pub fn fopen_for_read(path: *const ::std::os::raw::c_char) -> *mut FILE;
}
extern "C" {
    pub fn strcasecmp(
        __s1: *const ::std::os::raw::c_char,
        __s2: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn strcmp(
        __s1: *const ::std::os::raw::c_char,
        __s2: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub static vNames: [::std::os::raw::c_char; 107usize];
}
extern "C" {
    pub static vValues: [::std::os::raw::c_char; 25usize];
}
extern "C" {
    pub static PRIMES: [u16; 5usize];
}
extern "C" {
    pub static tokenlist: [::std::os::raw::c_char; 448usize];
}
extern "C" {
    pub static tokeninfo: [u32; 100usize];
}
extern "C" {
    pub static EMSG_INTERNAL_ERROR: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_UNEXP_EOS: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_UNEXP_TOKEN: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_DIV_BY_ZERO: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_INV_FMT: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_TOO_FEW_ARGS: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_NOT_ARRAY: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_POSSIBLE_ERROR: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_UNDEF_FUNC: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_NO_MATH: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub static EMSG_NEGATIVE_FIELD: [::std::os::raw::c_char; 0usize];
}
extern "C" {
    pub fn print_intvar();
}
extern "C" {
    pub fn print_var(v: *mut var_s);
}
extern "C" {
    pub fn print_rstream(rs: *mut rstream_s);
}
extern "C" {
    pub fn xasprintf(format: *const ::std::os::raw::c_char, ...) -> *mut ::std::os::raw::c_char;
}